--- a/public/jsmith.css
+++ b/public/jsmith.css
@@ -1,5 +1,4 @@
 
-
 body {
     background-color: black;
       font-family: "Arial", Arial, sans-serif;
@@ -7,11 +6,7 @@ body {
        text-align: center;
 }
 
-.contact {
-            text-align: center;
-
-}
-
+    /* website links */
 ul {
     text-align: center;
     list-style: none;
@@ -22,7 +17,6 @@ ul {
     a:link {
         color: green;
     }
-
     /* visited link */
     a:visited {
         color: gray;
@@ -30,14 +24,16 @@ ul {
     a:link {
         text-decoration: none;
     }
-
     a:visited {
         text-decoration: none;
     }
-
     a:hover {
         text-decoration: underline;
     }
-
     a:active {
         text-decoration: underline;
+
+    /* contact information */
+p {
+    text-align: center;
+}
